// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button layout should not change 1`] = `
<div>
  <button
    class="storybook-button storybook-button--large storybook-button--primary false"
    type="button"
  >
    <div
      class=""
    >
      <span>
        Button
      </span>
    </div>
  </button>
</div>
`;

exports[`Button layout should not change 2`] = `
<div>
  <button
    class="storybook-button storybook-button--medium storybook-button--primary false"
    type="button"
  >
    <div
      class=""
    >
      <span>
        Button
      </span>
    </div>
  </button>
</div>
`;

exports[`Button layout should not change 3`] = `
<div>
  <button
    class="storybook-button storybook-button--small storybook-button--primary false"
    type="button"
  >
    <div
      class=""
    >
      <span>
        Button
      </span>
    </div>
  </button>
</div>
`;
